--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,19 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "all about backend",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
+    "helmet": "^8.0.0",
+    "http": "^0.0.1-security",
+    "morgan": "^1.10.0"
+  }
 }
