--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "helmet": "^8.0.0",
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "luxon": "^3.5.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.16",
