--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -24,7 +25,8 @@
     "luxon": "^3.5.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.16",
-    "winston": "^3.16.0"
+    "winston": "^3.16.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "prisma": "^5.22.0"
