--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node src/app.js"
+    "dev": "nodemon src/app.js"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +25,7 @@
     "luxon": "^3.5.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.16",
+    "nodemon": "^3.1.7",
     "winston": "^3.16.0",
     "zod": "^3.23.8"
   },
