--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.15.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@stream-io/video-react-sdk": "^1.7.11",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "@clerk/clerk-react": "^5.15.1",
-    "@stream-io/video-react-sdk": "^1.7.11",
     "framer-motion": "^11.11.11",
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.456.0",
@@ -33,7 +33,8 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "tsparticles-slim": "^2.12.0",
-    "universal-cookie": "^7.2.2"
+    "universal-cookie": "^7.2.2",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
