--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 VITE_SITE_NAME=HEALAI
-VITE_BACKEND_SERVER_URL= http://37.27.81.8:9000
+# VITE_BACKEND_SERVER_URL= http://37.27.81.8:9000
+VITE_BACKEND_SERVER_URL = http://localhost:3001
