--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,6 @@
 VITE_SITE_NAME=HEALAI
 # VITE_BACKEND_SERVER_URL= http://37.27.81.8:9000
-VITE_BACKEND_SERVER_URL = http://localhost:3001
+VITE_BACKEND_SERVER_URL = http://localhost:3001   
+# VITE_URL = "https://oibsip-1-2czf.onrender.com"
+VITE_RAZORPAY_KEY_ID = "rzp_test_kGF26SIu82U87v"	
+DISABLE_ESLINT_PLUGIN=true
