fix: update environment variables and chatbot API URL

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,9 @@
 VITE_SITE_NAME=HEALAI
- VITE_BACKEND_SERVER_URL= http://37.27.81.8:9000
-#VITE_BACKEND_SERVER_URL = http://localhost:3001
+VITE_BACKEND_SERVER_URL= http://37.27.81.8:3010
+# VITE_BACKEND_SERVER_URL = http://localhost:3001
 # VITE_URL = "https://oibsip-1-2czf.onrender.com"
 VITE_RAZORPAY_KEY_ID = "rzp_test_kGF26SIu82U87v"
 DISABLE_ESLINT_PLUGIN=true
+VITE_GOOGLE_CLIENT_ID='533590645844-vccg3747cve55d085ellfqt5pvjjoiis.apps.googleusercontent.com'
+VITE_GOOGLE_REDIRECT_URI='http://localhost:3001/auth/google/callback'
+VITE_CHATBOT_URL='http://37.27.81.8:3012'
